Fixed bug in nickname_config for mis alignment

--- a/assets/css/game_style.css
+++ b/assets/css/game_style.css
@@ -75,6 +75,10 @@ body {
     display: inline;
 }
 
+.nickname_config {
+    display: inline;
+}
+
 
 /************ Main Body ************/
 .form_placement {
